--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,17 @@ ul {
   margin: 0;
   padding: 0;
 }
+
+.button_1{
+  height: 38px;
+  background: #e8491d;
+  border: none;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: #ffffff;
+}
+
+
 /* Headers */
 
 header {
@@ -44,25 +55,88 @@ header li {
   padding: 0 20px 0 20px;
 }
 
-header #branding{
+header #branding {
   float: left;
 }
 
-header #branding h1{
+header #branding h1 {
   margin: 0;
 }
 
-header nav{
+header nav {
   float: right;
   margin-top: 10px;
 }
 
-header .highlight,header .current a{
+header .highlight, header .current a {
   color: #e8491d;
   font-weight: bold;
 }
 
-header a:hover{
+header a:hover {
   color: #cccccc;
   font-weight: bold;
+}
+/*showcase*/
+#showcase {
+  min-height: 400px;
+  background: url('../img/programer.jpg') no-repeat -270px -600px;
+  text-align: center;
+  color: #ffffff;
+}
+
+#showcase h1 {
+  margin-top: 100px;
+  font-size: 55px;
+  margin-bottom: 10px;
+}
+
+#showcase p {
+  font-size: 20px;
+}
+
+#newsletter{
+  padding: 15px;
+  color: #ffffff;
+  background: #35424a
+}
+
+/* newsletter */
+#newsletter h1{
+  float: left;
+}
+
+#newsletter form{
+  float: right;
+  margin-top: 15px;
+}
+
+#newsletter input[type = "email"]{
+  padding: 4px;
+  height: 25px;
+  width: 250px;
+}
+
+#boxes{
+  margin-top: 20px;
+}
+
+#boxes .box{
+  float: left;
+  width: 30%;
+  padding: 10px;
+  text-align: center;
+
+}
+
+#boxes .box img{
+  width: 90px;
+}
+
+footer {
+  padding: 20px;
+  margin-top: 20px;
+  color: #ffffff;
+  background-color: #e8491d;
+  text-align: center;
 }
