--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ ul {
   padding: 0;
 }
 
-.button_1{
+.button_1 {
   height: 38px;
   background: #e8491d;
   border: none;
@@ -30,13 +30,15 @@ ul {
   color: #ffffff;
 }
 
-.dark{
+.dark {
   padding: 15PX;
-  background:#35424a;
-  color:#ffffff;
+  background: #35424a;
+  color: #ffffff;
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+
 /* Headers */
 
 header {
@@ -83,7 +85,10 @@ header a:hover {
   color: #cccccc;
   font-weight: bold;
 }
+
+
 /*showcase*/
+
 #showcase {
   min-height: 400px;
   background: url('../img/programer.jpg') no-repeat -270px -600px;
@@ -101,54 +106,73 @@ header a:hover {
   font-size: 20px;
 }
 
-#newsletter{
+#newsletter {
   padding: 15px;
   color: #ffffff;
   background: #35424a
 }
 
+
 /* newsletter */
-#newsletter h1{
+
+#newsletter h1 {
   float: left;
 }
 
-#newsletter form{
+#newsletter form {
   float: right;
   margin-top: 15px;
 }
 
-#newsletter input[type = "email"]{
+#newsletter input[type="email"] {
   padding: 4px;
   height: 25px;
   width: 250px;
 }
 
-#boxes{
+#boxes {
   margin-top: 20px;
 }
 
-#boxes .box{
+#boxes .box {
   float: left;
   width: 30%;
   padding: 10px;
   text-align: center;
-
 }
 
-#boxes .box img{
+#boxes .box img {
   width: 90px;
 }
 
+
 /* Side bar */
-aside#sidebar{
+
+aside#sidebar {
   float: right;
   width: 30%;
   margin-top: px;
 }
 
-article#main-col{
+article#main-col {
   float: left;
   width: 65%
+}
+
+
+/* Services */
+
+ul#services li {
+  list-style: none;
+  padding: 20px;
+  border: #cccccc solid 1px;
+  margin-bottom: 5px;
+  background: #e6e6e6;
+}
+
+aside#sidebar .quote input, aside#sidebar .quote textarea {
+  width: 90%;
+  padding: 5px;
 }
 
 footer {
@@ -157,4 +181,36 @@ footer {
   color: #ffffff;
   background-color: #e8491d;
   text-align: center;
+}
+
+@media(max-width: 768px) {
+  header #branding,
+  header nav,
+  header nav li, #newsletter h1, #newsletter form, #boxes .box,
+  article#main-col,
+  aside#sidebar{
+    float: none;
+    text-align: center;
+    width: 100%;
+  }
+
+  header{
+    padding-bottom: 20px;
+  }
+
+  #showcase h1{
+    margin-top: 40px;
+  }
+
+  #newsletter button, .quote button{
+    display: block;
+    width: 100%;
+  }
+
+  #newsletter form input[type = "email"], .quote input, .quote textarea{
+    display: block;
+    width: 200%;
+    margin-bottom: 5px;
+  }
+
 }
